--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,26 @@ a{
   color: black;
 }
 
+.search{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10vh;
+
+}
+
+input{
+  background-color: rgba(0, 0, 0, 0.151);
+  height: 8vh;
+  width: 100vh;
+  font-size: 5vh;
+  font-weight: 700;
+  border-radius: 5vh;
+  text-align: center;
+  font-family: 'Fredericka the Great', cursive;
+  color: rgb(255, 204, 0);
+  outline-style: none;
+}
+
 @media (max-width: 800px) {
   .items {
     grid-template-columns: repeat(2, 1fr);
